[package]
name = "rclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

#cargo +nightly build -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort  --target x86_64-unknown-linux-gnu  --release
